# blitz

./: Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
examples/: client.rs  echo_server.rs  tls_server.rs
src/: buffer.rs  client.rs  error.rs  lib.rs  main.rs  server.rs  stream.rs  tls.rs  util.rs
src/handshake/: client.rs  core.rs  headers.rs  machine.rs  mod.rs  server.rs
src/http/: error.rs  method.rs  mod.rs  request.rs  response.rs
src/protocol/: compression.rs  config.rs  frame.rs  message.rs  mod.rs  websocket.rs
src/protocol/frame/: codec.rs  core.rs  frame.rs  mask.rs  mod.rs  utf.rs
src/websocket/: connection.rs  error.rs  frame.rs  mod.rs  protocol.rs
