[package]
name = "blitz-ws"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
authors = ["Risuleia"]
description = "Minimal stream-based WebSocket library"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Risuleia/blitz-ws"
documentation = "https://docs.rs/blitz-ws/0.1.0"
repository = "https://github.com/Risuleia/blitz-ws"
readme = "README.md"
keywords = ["websocket", "web", "server", "io"]
categories = ["network-programming", "web-programming::websocket"]
include = ["src/**/*", "examples/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["handshake"]
handshake = ["http", "httparse", "sha1"]
url = ["dep:url"]
native-tls = ["native-tls-crate"]
native-tls-vendored = ["native-tls", "native-tls-crate/vendored"]
rustls-tls-native-roots = ["__rustls-tls", "rustls-native-certs"]
rustls-tls-webpki-roots = ["__rustls-tls", "webpki-roots"]
__rustls-tls = ["rustls", "rustls-pki-types"]

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
flate2 = { version = "1.1.2", features = ["rust_backend"] }
http = { version = "1.3.1", optional = true }
httparse = { version = "1.10.1", optional = true }
rand = "0.9.1"
sha1 = { version = "0.10.6", optional = true }
url = { version = "2.1.0", optional = true }
thiserror = "2.0.12"
utf-8 = "0.7.6"

[dependencies.native-tls-crate]
optional = true
package = "native-tls"
version = "0.2.3"

[dependencies.rustls]
optional = true
default-features = false
features = ["std"]
version = "0.23.0"

[dependencies.rustls-pki-types]
optional = true
version = "1.0"

[dependencies.rustls-native-certs]
optional = true
version = "0.8.0"

[dependencies.webpki-roots]
optional = true
version = "0.26"
